# Kurs6

./: .env.sample  .gitignore  .pylintrc  README.md  dump.rdb  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
main/: admin.py  apps.py  forms.py  models.py  runapscheduler.py  task.py  urls.py  views.py
main/management/commands/: filldb.py  runapscheduler.py  runonce.py
main/migrations/: 0001_initial.py  0002_alter_client_comment_alter_client_email_and_more.py  0002_initial.py  0003_massage.py  0004_delete_massage.py  0005_message.py  0006_mailing.py  0007_alter_client_options_alter_mailing_options_and_more.py  0008_alter_client_options_alter_mailing_options.py  0009_alter_mailing_options.py  0010_alter_client_options_alter_mailing_options.py  0011_alter_client_is_active.py  0012_alter_mailing_options_alter_mailing_is_active.py  0013_alter_mailing_options.py  0014_log_client.py  0015_alter_client_options_alter_log_options_and_more.py  0016_alter_log_options.py  0017_alter_log_status.py
main/templates/: base.html  index.html
main/templates/include/: check.html  cross.html  gear.html  header.html  plus.html  run.html  uncheck.html
main/templates/main/: client_detail.html  (+12 more)
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_is_active.py  0003_user_name_alter_user_email.py  0004_alter_user_options.py
users/templates/: login.html
(+6 files in other folders)
