[tool.poetry]
name = "kurs6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
ipython = "^8.27.0"
pillow = "^10.4.0"
psycopg2-binary = "^2.9.9"
crispy-bootstrap5 = "^2024.2"
django-apscheduler = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
